# python-app-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TEMPLATE_USAGE.md  justfile  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
src/python_project_template/: __init__.py  main.py
tests/: __init__.py  test_python_app_template.py
